# assignment5-alignment

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  writeup.md
cs336_alignment/: drgrpo_grader.py
cs336_alignment/eval/: evaluate_vllm.py
cs336_alignment/eval/results/: evaluation_results.json
cs336_alignment/grpo/: normalization.py  policy_loss.py
data/mmlu/dev/: clinical_knowledge_dev.csv  global_facts_dev.csv  high_school_computer_science_dev.csv  high_school_physics_dev.csv  high_school_psychology_dev.csv  high_school_statistics_dev.csv  human_aging_dev.csv  machine_learning_dev.csv  moral_disputes_dev.csv  moral_scenarios_dev.csv  nutrition_dev.csv  prehistory_dev.csv  security_studies_dev.csv  virology_dev.csv  world_religions_dev.csv
data/mmlu/test/: clinical_knowledge_test.csv  elementary_mathematics_test.csv  global_facts_test.csv  high_school_chemistry_test.csv  high_school_geography_test.csv  high_school_macroeconomics_test.csv  high_school_physics_test.csv  machine_learning_test.csv  medical_genetics_test.csv  miscellaneous_test.csv  moral_scenarios_test.csv  nutrition_test.csv  professional_accounting_test.csv  professional_law_test.csv  professional_medicine_test.csv  professional_psychology_test.csv  public_relations_test.csv
data/mmlu/val/: clinical_knowledge_val.csv  college_chemistry_val.csv  elementary_mathematics_val.csv  global_facts_val.csv  high_school_biology_val.csv  human_sexuality_val.csv  miscellaneous_val.csv  nutrition_val.csv
data/simple_safety_tests/: simple_safety_tests.csv
scripts/: README.md  download_model.sh  download_models.py  evaluate_safety.py
tests/: adapters.py  conftest.py  test_data.py  test_metrics.py  test_sft.py
tests/fixtures/: tokenized_sft_sample.json
